--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zong Liang"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Stay hungry, Stay foolish"
   location         : "Beijing"
   employer         :
   pubmed           :
