--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zong Liang"
-  avatar           : "profile.png"
+  avatar           : "zong.PNG"
   bio              : "Stay hungry, Stay foolish"
   location         : "Beijing"
   employer         :
