--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   orcid            :
   pinterest        :
   soundcloud       :
-  stackoverflow    : http://stackoverflow.com/users/15884525/liang-zong
+  stackoverflow    : "15884525/liang-zong"
   steam            :
   tumblr           :
   twitter          :
